--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "validate-color": "^2.2.4"
   }
 }
